--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Git Test</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <h1>Hola Web Git</h1>
-
+    <div class="container">
+        <h1>Estilos styles2</h1>
+    </div>
 </body>
 </html>
