Afegit titol a la pàgina

--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
     <div class="container5">
         <h2>Estilos styles2</h2>
     </div>
+    <div class="container5">
+        <h1>Estilos Final</h1>
+    </div>
 </body>
 </html>
