Incloure estilos nueva versión

--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
     <div class="container5">
         <h1>Estilos Final</h1>
     </div>
+
+    <div class="container5">
+        <h1>Estilos Nueva versión</h1>
+    </div>
 </body>
 </html>
